# libdivecomputerjs

./: .gitignore  .prettierrc  CHANGELOG.md  CMakeLists.txt  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsnode.json  tshook.js
cmake/: FindDiveComputer.cmake  libdivecomputer.cmake
dev/: download-for-win32.js
dev/def/: libdivecomputer-0.def  libdivecomputer-0.exp  libdivecomputer-0.lib
dev/libdivecomputer/: version.h
examples/: download-eonsteel.ts  dump-eonsteel.ts
examples/helpers/: descriptors.ts  parser.ts
src/: asyncdevicereader.cc  asyncdevicereader.h  asyncdevicereaderworker.cc  asyncdevicereaderworker.h  context.cc  context.h  descriptor.cc  descriptor.h  device.cc  device.h  iostream.cc  iostream.h  module.cc  parser.cc  parser.h  version.cc  version.h
src/contracts/: errorable.h
src/enums/: eventtypes.cc  eventtypes.h  fieldtypes.cc  fieldtypes.h  loglevel.cc  loglevel.h  sampletypes.cc  sampletypes.h  transport.cc  transport.h
src/errors/: DCError.cc  DCError.h
src/transports/: bluetooth.cc  bluetooth.h  irda.cc  irda.h  nativetransport.h  serial.cc  serial.h  usbhid.cc  usbhid.h
src/values/: divedata.cc  divedata.h  eventdata.cc  eventdata.h  logdata.cc  logdata.h  wrappeddata.cc  wrappeddata.h
test/: context.spec.ts  descriptors.spec.ts  download-eonsteel.ts  libdivecomputer.spec.ts  parser.spec.ts  version.spec.ts
test/data/: SuuntoEONSteelReference.json
test/enums/: eventTypes.spec.ts  fieldtypes.spec.ts  loglevels.spec.ts  sampleTypes.spec.ts  transports.spec.ts
typings/: asserttypes.d.ts
(+14 files in other folders)
